force-app/main/default/objects/Sales_Tax__c/Sales_Tax__c.object-meta.xml
<CustomObject>
    <label>Sales Tax</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Sales Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Tax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>