force-app/main/default/objects/Sales_Tax__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>